--- a/src/features/createOrder/orderCard/UI/styles.module.scss
+++ b/src/features/createOrder/orderCard/UI/styles.module.scss
@@ -70,8 +70,8 @@
         padding: 0px;
       }
 
-      > p {
-        color: var(--Personal-color-black);
+      > a {
+        color: var(--Personal-colors-main);
         font-size: 14px;
         font-weight: 600;
       }
