--- a/src/features/offer/acceptOffer/UI/styles.module.scss
+++ b/src/features/offer/acceptOffer/UI/styles.module.scss
@@ -29,6 +29,7 @@
 .drawer_popover {
   display: grid;
   grid-auto-flow: row;
+  align-content: start;
   gap: 15px;
   height: 100%;
   width: 100%;
