--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -194,6 +194,10 @@
         justify-items: center;
         text-align: center;
 
+        @media (max-width: 576px) {
+          justify-items: end;
+        }
+
         .platform__icon {
           position: absolute;
           top: 10px;
