--- a/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
+++ b/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
@@ -40,7 +40,6 @@
     width: 64px;
     height: 64px;
     border-radius: 50%;
-    border: 3px solid #ddd;
     cursor: pointer;
 
     @media (max-width: 768px) {
@@ -53,59 +52,23 @@
       height: 56px;
     }
 
-    &::before {
-      content: "";
-      position: absolute;
-      height: calc(100% + 6px);
-      width: calc(100% + 6px);
-      left: -3px;
-      transform: rotate(-45deg);
-      border-radius: 50%;
+    canvas {
+      width: 64px;
+      height: 64px;
+
+      @media (max-width: 768px) {
+        width: 60px;
+        height: 60px;
+      }
+
+      @media (max-width: 576px) {
+        width: 56px;
+        height: 56px;
+      }
+    }
+
+    &.no_match {
       border: 3px solid #ddd;
-    }
-
-    &.low::before {
-      border-top: 3px solid transparent;
-      border-right: 3px solid #fe3430fc;
-      border-bottom: 3px solid transparent;
-      border-left: 3px solid transparent;
-      // border-top: 3px solid transparent;
-      // border-right: 3px solid rgba(125, 53, 240, 0.3);
-      // border-bottom: 3px solid transparent;
-      // border-left: 3px solid transparent;
-    }
-
-    &.medium::before {
-      border-top: 3px solid transparent;
-      border-right: 3px solid #fe9730fc;
-      border-bottom: 3px solid #fe9730fc;
-      border-left: 3px solid transparent;
-      // border-top: 3px solid transparent;
-      // border-right: 3px solid rgba(125, 53, 240, 0.5);
-      // border-bottom: 3px solid rgba(125, 53, 240, 0.5);
-      // border-left: 3px solid transparent;
-    }
-
-    &.high::before {
-      border-top: 3px solid transparent;
-      border-right: 3px solid #ffca28;
-      border-bottom: 3px solid #ffca28;
-      border-left: 3px solid #ffca28;
-      // border-top: 3px solid transparent;
-      // border-right: 3px solid rgba(125, 53, 240, 0.7);
-      // border-bottom: 3px solid rgba(125, 53, 240, 0.7);
-      // border-left: 3px solid rgba(125, 53, 240, 0.7);
-    }
-
-    &.full::before {
-      border-top: 3px solid #4772e6;
-      border-right: 3px solid #4772e6;
-      border-bottom: 3px solid #4772e6;
-      border-left: 3px solid #4772e6;
-      // border-top: 3px solid rgba(125, 53, 240, 1);
-      // border-right: 3px solid rgba(125, 53, 240, 1);
-      // border-bottom: 3px solid rgba(125, 53, 240, 1);
-      // border-left: 3px solid rgba(125, 53, 240, 1);
     }
   }
 
