--- a/src/features/catalog/recomTargetCard/UI/styles.module.scss
+++ b/src/features/catalog/recomTargetCard/UI/styles.module.scss
@@ -4,7 +4,7 @@
   column-gap: 10px;
   border-radius: 10px;
   align-content: start;
-  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 2px 10px 1px rgba(0, 0, 0, 0.15);
   padding: 10px;
   cursor: pointer;
 
@@ -48,8 +48,10 @@
   .checkbox {
     display: grid;
     align-items: start;
+    cursor: pointer;
 
     input {
+      cursor: pointer;
       width: 20px;
       height: 20px;
     }
