--- a/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
@@ -75,6 +75,8 @@
         background: var(--Personal-colors-White);
         box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
         border-radius: 20px;
+        box-shadow: inset 0px 0px 4px 1px rgba(0, 0, 0, 0.2);
+        transition: all 500ms ease;
 
         .item {
           display: grid;
@@ -120,10 +122,6 @@
               svg {
                 width: 26px;
                 height: 26px;
-
-                @media (max-width: 576px) {
-                  display: none;
-                }
               }
             }
           }
@@ -132,7 +130,7 @@
             display: grid;
             grid-auto-flow: row;
             row-gap: 20px;
-            padding: 5px 15px 15px 15px;
+            padding: 5px 20px 20px 20px;
           }
         }
 
@@ -154,6 +152,11 @@
           .arrow {
             background: var(--Gradients-Gradient-1) !important;
           }
+        }
+
+        &.selected {
+          box-shadow: inset 0px 0px 2px 1px var(--Personal-colors-main);
+          transition: all 500ms ease;
         }
       }
     }
