--- a/src/features/communication/chat/chatCard/UI/styles.module.scss
+++ b/src/features/communication/chat/chatCard/UI/styles.module.scss
@@ -3,8 +3,28 @@
   grid-auto-flow: column;
   column-gap: 10px;
   padding: 10px;
-  border-bottom: 1px solid #d9d9d9;
+  // border-bottom: 1px solid #d9d9d9;
   cursor: pointer;
+  background: var(--Personal-colors-White);
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+
+  &:hover {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.144);
+  }
+
+  &.active {
+    border-radius: 10px;
+    background: var(
+      --Gradients-Gradient-1,
+      linear-gradient(45deg, #4772e6 23.91%, #8e54e9 75.06%)
+    );
+    p,
+    span {
+      color: var(--Personal-colors-White);
+    }
+  }
 }
 
 .info {
@@ -62,9 +82,11 @@
 
 .date {
   display: grid;
-  grid-template: 1fr 1fr /1fr;
+  grid-auto-flow: row;
+  row-gap: 5px;
   align-content: space-between;
   justify-items: end;
+  position: relative;
 
   p {
     color: var(--Sub-text);
@@ -73,14 +95,19 @@
     font-weight: 600;
     line-height: 1;
   }
+
   .unread {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
     display: grid;
     align-content: center;
     justify-content: center;
-    width: 20px;
-    height: 20px;
+    padding: 5px;
+    border-radius: 20px;
     background-color: var(--Personal-colors-main);
-    border-radius: 50%;
+    min-height: 20px;
+    min-width: 20px;
 
     span {
       color: var(--Personal-colors-White);
@@ -89,16 +116,5 @@
       font-weight: 500;
       line-height: 1;
     }
-  }
-}
-
-.active {
-  background: var(
-    --Gradients-Gradient-1,
-    linear-gradient(45deg, #4772e6 23.91%, #8e54e9 75.06%)
-  );
-  p,
-  span {
-    color: var(--Personal-colors-White);
   }
 }
