--- a/src/features/communication/chat/chatMessages/UI/styles.module.scss
+++ b/src/features/communication/chat/chatMessages/UI/styles.module.scss
@@ -1,13 +1,32 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  padding: 0 10px;
+
   // align-items: end;
-  background: url("/images/phoneDisplay/tgbg.png") no-repeat;
-  background-size: cover;
+  // background: url("/images/phoneDisplay/tgbg.png") no-repeat;
+  // background-size: cover;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
   height: calc(100% - 70px);
+
+  .no_messages {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+
+    p {
+      font-size: 16px;
+      font-weight: 500;
+      font-style: normal;
+      line-height: normal;
+      color: var(--Personal-colors-White);
+    }
+  }
 
   .arrow__down {
     height: 40px;
@@ -25,8 +44,10 @@
 
   .check {
     display: grid;
+    grid-template: 1fr min-content min-content / 1fr;
     overflow-y: scroll;
     align-items: end;
+    padding: 0 15px;
 
     &::-webkit-scrollbar {
       display: none;
@@ -39,8 +60,15 @@
     .all__messages {
       display: grid;
       grid-auto-flow: row;
-      row-gap: 15px;
+      // row-gap: 15px;
       // padding-bottom: 60px;
+
+      .skeleton_wrapper {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+        padding-bottom: 10px;
+      }
 
       .messages_wrapper {
         display: grid;
@@ -54,20 +82,70 @@
     display: flex;
     position: relative;
 
-    &.recipient {
+    .appendix {
+      position: absolute;
+      bottom: 0;
+      svg {
+        width: 7px;
+        height: 17px;
+      }
+    }
+
+    &.receiver {
       justify-content: start;
+      --start-color: #f0f4f8;
+
+      .appendix {
+        left: -6.5px;
+        transform: scaleX(-1);
+      }
+
+      .message {
+        border-radius: 10px 20px 20px 0;
+        background: var(--start-color);
+        color: var(--Personal-colors-black);
+      }
+
+      &.less {
+        .message {
+          border-radius: 10px 20px 20px 10px;
+        }
+      }
     }
 
     &.sender {
       justify-content: end;
+      --start-color: hsla(254, 76%, 64%);
+
+      .appendix {
+        right: -6.5px;
+      }
+
+      .message {
+        border-radius: 20px 10px 0 20px;
+        background: var(--start-color);
+        color: var(--Personal-colors-White);
+      }
+
+      &.less {
+        .message {
+          border-radius: 20px 10px 10px 20px;
+        }
+      }
+    }
+
+    &.more {
+      margin-bottom: 10px;
+    }
+    &.less {
+      margin-bottom: 3px;
     }
   }
 
   .message {
     display: grid;
     grid-auto-flow: row;
-    padding: 8px 16px 20px 16px;
-    border-radius: 10px;
+    padding: 10px 80px 10px 16px;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
@@ -78,29 +156,40 @@
 
     .time {
       position: absolute;
+      display: grid;
+      grid-auto-flow: column;
+      align-content: center;
+      align-items: center;
+      column-gap: 5px;
       bottom: 5px;
-      right: 5px;
-      // color: rgba(255, 255, 255, 0.5);
-      font-size: 10px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 1;
+      right: 15px;
+
+      span {
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1;
+        opacity: 0.5;
+      }
+
+      .read {
+        --start-color: white;
+        svg {
+          height: 10px;
+          width: auto;
+        }
+      }
     }
 
-    // span {
-    //   text-align: end;
-    //   opacity: 0.5;
+    // &.receiver {
+    //   background: #F0F4F8;
+    //   color: var(--Personal-colors-black);
     // }
 
-    &.recipient {
-      background: #f0f4f8;
-      color: var(--Personal-colors-black);
-    }
-
-    &.sender {
-      background: #7d5ce9;
-      color: var(--Personal-colors-White);
-    }
+    // &.sender {
+    //   background: hsla(254, 76%, 64%);
+    //   color: var(--Personal-colors-White);
+    // }
   }
 
   .date {
