--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -4,7 +4,7 @@
   // justify-content: center;
 }
 
-.chat {
+.trigger {
   display: grid;
   grid-auto-flow: column;
   justify-content: center;
@@ -16,15 +16,26 @@
 
 .content {
   display: grid;
-  align-items: start;
-  border-radius: 25px;
   background: var(--Personal-colors-White);
   grid-template: 1fr / 0.7fr 1fr;
-  overflow: hidden;
-  max-width: 850px;
-  height: 70vh;
-  width: 850px;
   position: relative;
+  overflow: hidden;
+
+  &.dialog {
+    height: 70vh;
+    max-width: 850px;
+    width: 850px;
+  }
+
+  &.drawer {
+    height: 100vh;
+    width: 100vw;
+
+    .close {
+      top: 0;
+      right: 0;
+    }
+  }
 
   @media (max-width: 992px) {
     width: 75vw;
@@ -50,75 +61,80 @@
 
   &__left {
     display: grid;
-    align-items: start;
-    grid-auto-flow: row;
-    height: inherit;
+    grid-template: min-content min-content 1fr / 1fr;
     border-right: 0.5px solid rgba(0, 0, 0, 0.3);
+    overflow: hidden;
 
-    .left {
+    .title {
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 1;
+      color: var(--Personal-colors-main);
+      padding: 15px 25px;
+      text-align: center;
+      border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
+
+      @media (max-width: 576px) {
+        font-weight: 500;
+      }
+    }
+
+    .filter {
       display: grid;
-      align-items: start;
-      grid-auto-flow: row;
+      grid-auto-flow: column;
+      padding: 10px;
+      border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
 
-      .title {
-        font-size: 24px;
+      li {
+        font-size: 14px;
         font-style: normal;
         font-weight: 600;
         line-height: 1;
-        color: var(--Personal-colors-main);
-        padding: 25px 0;
-        text-align: center;
+        padding: 10px 0;
 
         @media (max-width: 576px) {
           font-weight: 500;
         }
       }
-
-      .filter {
-        display: grid;
-        grid-auto-flow: column;
-        margin: 0 10px 10px 10px;
-
-        li {
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 600;
-          line-height: 1;
-          padding: 10px 0;
-
-          @media (max-width: 576px) {
-            font-weight: 500;
-          }
-        }
-      }
     }
 
     .all_chats {
+      // height: 57vh;
+      padding: 5px;
       display: grid;
       grid-auto-flow: row;
+      row-gap: 5px;
       align-content: start;
       overflow-y: scroll;
 
       &::-webkit-scrollbar {
-        display: none;
+        width: 2px;
+        height: 2px;
+        background-color: #ccc;
+        border-radius: 5px;
+        cursor: pointer;
       }
 
       &::-webkit-scrollbar-thumb {
-        display: none;
+        cursor: pointer;
+        background-color: #999;
+        border-radius: 5px;
       }
     }
   }
 
   &__right {
-    // display: grid;
-    // grid-auto-flow: row;
+    background: url("/images/phoneDisplay/tgbg.png") no-repeat;
+    background-size: cover;
     position: relative;
     height: inherit;
-    background: var(--Personal-colors-White);
+    // background: var(--Personal-colors-White);
 
     @media (max-width: 768px) {
       position: fixed;
       width: inherit;
+      z-index: 10;
     }
 
     .arrow {
@@ -139,6 +155,7 @@
       grid-auto-flow: column;
       align-items: center;
       justify-content: space-between;
+      background: var(--Personal-colors-White);
 
       p {
         font-size: 24px;
@@ -187,9 +204,6 @@
             font-style: normal;
             font-weight: 600;
             line-height: 1;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
           }
         }
       }
@@ -201,4 +215,29 @@
   display: grid;
   grid-auto-flow: row;
   align-content: space-between;
+}
+
+.chat__choose {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  .no_messages {
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+
+    p {
+      font-size: 16px;
+      font-weight: 500;
+      font-style: normal;
+      line-height: normal;
+      color: var(--Personal-colors-White);
+    }
+  }
 }
