--- a/src/features/order/seePost/UI/styles.module.scss
+++ b/src/features/order/seePost/UI/styles.module.scss
@@ -6,3 +6,52 @@
   font-weight: 500;
   line-height: 1;
 }
+
+.content {
+  max-width: 300px;
+  gap: 0;
+  background: transparent;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  box-shadow: none;
+
+  @media (min-width: 993px) {
+    width: 25vw;
+  }
+
+  @media (max-width: 992px) {
+    width: 30vw;
+  }
+
+  @media (max-width: 768px) {
+    width: 35vw;
+  }
+
+  @media (max-width: 576px) {
+    width: 50vw;
+  }
+
+  @media (max-width: 475px) {
+    width: 60vw;
+  }
+}
+
+.x_button {
+  position: absolute;
+  background-color: white;
+  cursor: pointer;
+  width: 30px;
+  padding: 2px;
+  border-radius: 50%;
+
+  @media (min-width: 476px) {
+    right: -40px;
+    top: -20px;
+  }
+
+  @media (max-width: 475px) {
+    right: -32px;
+    top: -16px;
+  }
+}
