--- a/src/features/project/technicalSpecification/UI/styles.module.scss
+++ b/src/features/project/technicalSpecification/UI/styles.module.scss
@@ -36,6 +36,7 @@
   position: relative;
   background: var(--Personal-colors-White);
   height: 100%;
+  min-width: 60vw;
 
   .top {
     display: grid;
