--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -1,7 +1,6 @@
 .wrapper {
   display: grid;
   align-items: center;
-  // justify-content: center;
 }
 
 .trigger {
@@ -17,14 +16,14 @@
 .content {
   display: grid;
   background: var(--Personal-colors-White);
-  grid-template: 1fr / 0.7fr 1fr;
   position: relative;
   overflow: hidden;
 
   &.dialog {
+    grid-template: 1fr / 0.7fr 1fr;
     height: 70vh;
     max-width: 850px;
-    width: 850px;
+    width: 90vw;
   }
 
   &.drawer {
@@ -33,19 +32,15 @@
 
     .close {
       top: 50%;
-      right: 15px;
+      right: 0;
       transform: translateY(-50%);
-    }
-
-    .content__left {
-      height: calc(var(--vh) * 100);
     }
   }
 
   .close {
     position: absolute;
-    top: 10px;
-    right: 15px;
+    top: 0;
+    right: 0;
     padding: 15px;
     border-radius: 50%;
 
@@ -58,6 +53,7 @@
     display: grid;
     border-right: 0.5px solid rgba(0, 0, 0, 0.3);
     overflow: hidden;
+    height: 100%;
 
     &.gridA {
       grid-template: min-content min-content 1fr / 1fr;
@@ -69,18 +65,21 @@
 
     .title {
       display: grid;
-      position: relative;
-      font-size: 24px;
-      font-style: normal;
+      padding: 20px 30px;
       text-align: start;
-      font-weight: 600;
-      line-height: 1;
-      color: var(--Personal-colors-main);
-      padding: 20px 50px;
+      position: relative;
       border-bottom: 1px solid var(--black-20, #ccc);
 
-      @media (max-width: 576px) {
-        font-weight: 500;
+      p {
+        font-size: 24px;
+        font-style: normal;
+        line-height: 1;
+        font-weight: 600;
+        color: var(--Personal-colors-main);
+
+        @media (max-width: 576px) {
+          font-weight: 500;
+        }
       }
     }
 
@@ -104,11 +103,10 @@
     }
 
     .all_chats {
-      // height: 57vh;
-      padding: 5px;
       display: grid;
       grid-auto-flow: row;
-      row-gap: 5px;
+      row-gap: 10px;
+      padding: 10px;
       align-content: start;
       overflow-y: scroll;
 
@@ -133,7 +131,8 @@
     background-size: cover;
     position: relative;
     height: inherit;
-    // background: var(--Personal-colors-White);
+    display: grid;
+    grid-template: min-content 1fr /1fr;
 
     @media (max-width: 768px) {
       position: fixed;
@@ -179,7 +178,7 @@
         grid-auto-flow: column;
         column-gap: 10px;
         justify-content: start;
-        padding: 15px 65px 15px 15px;
+        padding: 12px 65px 12px 15px;
 
         @media (max-width: 768px) {
           padding: 15px 65px 15px 65px;
@@ -187,12 +186,29 @@
 
         .logo {
           display: grid;
+          align-content: center;
 
           img {
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            border: 0.5px solid var(--Personal-colors-main);
+            box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.16);
+          }
+
+          .icon {
+            display: grid;
+            justify-content: center;
+            align-content: center;
+            width: 40px;
+            height: 40px;
+            background: var(--Gradients-Gradient-1);
+            box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.16);
+            border-radius: 50%;
+
+            svg {
+              width: 30px;
+              height: 30px;
+            }
           }
         }
 
