--- a/src/widgets/communication/notifications/UI/styles.module.scss
+++ b/src/widgets/communication/notifications/UI/styles.module.scss
@@ -36,7 +36,8 @@
     align-content: center;
     position: relative;
     padding: 20px 50px;
-    border-bottom: 1px solid var(--black-20, #ccc);
+    // border-bottom: 1px solid var(--black-20, #ccc);
+    box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.1);
 
     p {
       font-size: 24px;
@@ -49,9 +50,8 @@
     .close {
       position: absolute;
       top: 50%;
-      right: 15px;
+      right: 0;
       transform: translateY(-50%);
-
       padding: 15px;
       border-radius: 50%;
 
@@ -64,7 +64,7 @@
       position: absolute;
       top: 50%;
       left: 5px;
-      transform: translateY(-50%) rotate(90deg); /* Объединяем оба преобразования */
+      transform: translateY(-50%) rotate(90deg);
 
       padding: 15px;
       border-radius: 50%;
@@ -99,7 +99,8 @@
     display: grid;
     justify-content: start;
     align-content: center;
-    border-top: 0.5px solid var(--black-20, #ccc);
+    // border-top: 0.5px solid var(--black-20, #ccc);
+    box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.1);
 
     p {
       font-size: 12px;
