--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -6,6 +6,8 @@
   --Subtitle-text: #666;
   --secondary-text: #606060;
 
+  --left-padding-header: 2.5vw;
+
   --Gradients-Gradient-1: linear-gradient(
     45deg,
     #4772e6 23.91%,
@@ -104,8 +106,8 @@
   --container-padding-xs-side: 10px;
   --container-padding-xs-top: 40px;
 
-  --header-height-xl: 80px;
-  --header-height-lg: 80px;
+  --header-height-xl: 90px;
+  --header-height-lg: 90px;
   --header-height-md: 72px;
   --header-height-sm: 64px;
   --header-height-xs: 56px;
