--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -1,13 +1,20 @@
 .dropdown {
-  position: relative;
-
   .menu {
     &__content {
       display: grid;
       grid-template-rows: repeat(2, min-content);
       grid-template-columns: 1fr;
-      background-color: var(--Personal-colors-White);
       height: calc(var(--vh) * 100);
+      background: rgba(255, 255, 255, 0.6);
+      z-index: 999;
+      width: calc(100vw);
+      transform: translate(calc(var(--left-padding-header) * (-1)), -1rem);
+
+      @media (max-width: 768px) {
+        width: 100%;
+        transform: translate(0, 0);
+        background: rgba(255, 255, 255, 0.7);
+      }
     }
 
     &__accordion {
@@ -21,11 +28,12 @@
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 10;
 
-    @media (max-width: 576px) {
+    @media (max-width: 768px) {
       width: 100%;
     }
 
@@ -111,6 +119,7 @@
 
         .balance {
           padding: 5px 25px 25px 25px;
+
           p {
             font-size: 24px;
             font-style: normal;
@@ -136,6 +145,7 @@
       grid-auto-flow: column;
       justify-content: space-between;
       align-items: center;
+      background: #fff;
 
       height: var(--header-height-xl);
 
@@ -236,7 +246,8 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #333; /* Цвет линий крестика */
+    background-color: #333;
+    /* Цвет линий крестика */
     top: 50%;
     left: 0;
     transform: translateY(-50%);
