--- a/src/pages/layouts/components/header/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/styles.module.scss
@@ -1,57 +1,139 @@
 .wrapper {
-  display: grid;
-  padding: 0 20px;
-  justify-content: space-between;
-  grid-auto-flow: column;
-  align-items: center;
+  height: var(--header-height-xl);
   width: 100%;
   z-index: 10;
   position: fixed;
-  top: 0;
   left: 0;
-  background: rgba(255, 255, 255, 0.8);
-  height: var(--header-height-xl);
-  border-radius: 0px 0px 25px 25px;
-  box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
+  top: 1rem;
+  display: grid;
+  grid-template: 1fr / var(--header-height-xl) auto;
+  gap: 20px;
+  align-items: center;
+  padding: 0px var(--left-padding-header);
+
+  transition: transform 0.8s ease;
+  transform: translateY(0);
+
+  &.hidden {
+    transform: translateY(-120%);
+  }
+
+  &.visible {
+    transform: translateY(0);
+  }
+
+  &.not_auth {
+    @media (min-width: 1401px) {
+      grid-template: 1fr / 1fr;
+    }
+
+    .header {
+      @media (min-width: 1401px) {
+        max-width: 1400px;
+        margin: 0 auto;
+      }
+    }
+  }
 
   @media (max-width: 992px) {
     height: var(--header-height-lg);
+    grid-template: 1fr / var(--header-height-lg) auto;
   }
 
   @media (max-width: 768px) {
     height: var(--header-height-md);
+    top: 0;
+    display: block;
+    padding: 0;
   }
 
   @media (max-width: 576px) {
     height: var(--header-height-sm);
-    border-radius: 0px 0px 15px 15px;
   }
 
   @media (max-width: 375px) {
     height: var(--header-height-xs);
   }
 
-  .navigation {
+  .dropdown {
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 50px;
+    box-shadow: 0px 2px 10px 1px rgba(142, 84, 233, 0.3);
+    backdrop-filter: blur(8px);
+    border: 1px solid rgba(142, 84, 233, 0.3);
+    height: var(--header-height-xl);
+    width: var(--header-height-xl);
     display: grid;
-    grid-auto-flow: column;
-    column-gap: 30px;
+    justify-content: center;
     align-items: center;
+
+    @media (max-width: 992px) {
+      height: var(--header-height-lg);
+    }
 
     @media (max-width: 768px) {
-      column-gap: 20px;
+      display: none;
+    }
+
+    &.circle_hidden {
+      background: rgba(142, 84, 233, 0);
+      box-shadow: none;
+      border: none;
     }
   }
 
-  .profile {
+  .header {
+    height: 100%;
     display: grid;
+    padding: 0 20px;
+    justify-content: space-between;
     grid-auto-flow: column;
-    column-gap: 20px;
     align-items: center;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 50px;
+    box-shadow: 0px 2px 10px 1px rgba(142, 84, 233, 0.3);
+    backdrop-filter: blur(8px);
+    border: 1px solid rgba(142, 84, 233, 0.3);
 
-    .separator {
-      height: 100%;
-      border-right: 0.5px solid #b2b2b2;
+    @media (max-width: 768px) {
+      border-radius: 0;
+      background: rgba(255, 255, 255, 0.5);
+      box-shadow: 0px 2px 10px 1px rgba(142, 84, 233, 0.15);
+    }
+
+    .navigation {
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 30px;
+      align-items: center;
+
+      @media (max-width: 768px) {
+        column-gap: 20px;
+      }
+
+      .dropdown_mobile {
+        display: none;
+
+        @media (max-width: 768px) {
+          display: block;
+        }
+      }
+    }
+
+    .profile {
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 20px;
+      align-items: center;
+
+      .separator {
+        height: 100%;
+        border-right: 0.5px solid #b2b2b2;
+      }
     }
   }
+}
+
+.is_open {
+  display: none !important;
 }
