--- a/src/pages/layouts/components/sidebar/UI/styles.module.scss
+++ b/src/pages/layouts/components/sidebar/UI/styles.module.scss
@@ -1,11 +1,27 @@
 .wrapper {
   display: block;
-  // top: var(--container-padding-top);
-  top: 0;
+  top: 1rem;
   position: fixed;
-  height: calc(var(--vh) * 100);
-  background: var(--Personal-colors-White);
+  left: var(--left-padding-header);
+  height: auto;
+  // background: var(--Personal-colors-White);
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(20px);
   overflow-y: auto;
+  border-radius: 50px;
+  width: var(--header-height-xl);
+  border: 1px solid rgba(142, 84, 233, 0.2);
+
+  transition: transform 0.5s ease-in-out;
+  transform: translateY(0);
+
+  &.hidden {
+    transform: translateY(-110%);
+  }
+
+  &.visible {
+    transform: translateY(0);
+  }
 
   @media (max-width: 992px) {
     display: none;
@@ -33,7 +49,7 @@
   }
 
   .menu {
-    padding-top: var(--container-padding-top);
+    padding-top: calc(var(--container-padding-top) + 3rem);
     display: grid;
     grid-auto-flow: row;
     row-gap: 25px;
@@ -54,25 +70,28 @@
       &__row {
         padding: 5px;
         justify-content: center;
-        border-radius: 25px;
-        border: 0.1px solid var(--Personal-colors-main);
+        border-radius: 1000px;
+        border: 1px solid var(--Personal-colors-main);
         display: inline-flex;
         align-items: center;
         margin: 15px 10px;
+        width: 45px;
+        height: 45px;
+        background: var(--Gradients-Gradient-1);
+        box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 1);
+        margin: 1px;
 
         p {
           text-align: center;
           font-size: 18px;
-          font-style: normal;
           font-weight: 500;
           line-height: 1;
-          padding: 10px;
+          margin-top: 2px;
           justify-content: center;
           align-items: center;
           align-self: stretch;
           color: var(--Personal-colors-White);
-          background: var(--Gradients-Gradient-1);
-          border-radius: 50%;
+          border-radius: 1000px;
         }
       }
     }
