--- a/src/entities/wallet/ui/history/skeleton/styles.module.scss
+++ b/src/entities/wallet/ui/history/skeleton/styles.module.scss
@@ -1,29 +1,26 @@
 .card {
   display: grid;
-  height: 75px;
-  // grid-template:
-  //   1fr / minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(
-  //     10vw,
-  //     15vw
-  //   )
-  //   minmax(20vw, 20vw);
+  height: 70px;
   grid-template: 1fr / 1fr 1fr 1fr 1fr 1.5fr;
-  align-items: center;
-  padding: 20px;
-  column-gap: 15px;
+  padding: 10px 0;
   box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
 
   @media (max-width: 992px) {
     padding: 10px 15px;
     column-gap: 10px;
-    height: 70px;
+  }
+
+  .info {
+    display: grid;
+    align-content: center;
+    padding: 10px;
   }
 }
 
 .card__xs {
   height: 165px;
-  padding: 10px 20px;
+  padding: 10px;
   display: grid;
   grid-auto-flow: row;
   row-gap: 20px;
