--- a/src/pages/layouts/components/header/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/styles.module.scss
@@ -1,18 +1,18 @@
 .wrapper {
+  display: grid;
+  grid-template: 1fr / var(--header-height-xl) auto;
+  gap: 20px;
+  padding: 0px var(--left-padding-header);
+  align-items: center;
   height: var(--header-height-xl);
   width: 100%;
   z-index: 10;
   position: fixed;
   left: 0;
   top: 1rem;
-  display: grid;
-  grid-template: 1fr / var(--header-height-xl) auto;
-  gap: 20px;
-  align-items: center;
-  padding: 0px var(--left-padding-header);
-
   transition: transform 0.8s ease;
   transform: translateY(0);
+  z-index: 50;
 
   &.hidden {
     transform: translateY(-120%);
