--- a/src/pages/layouts/components/sidebar/UI/styles.module.scss
+++ b/src/pages/layouts/components/sidebar/UI/styles.module.scss
@@ -4,13 +4,13 @@
   position: fixed;
   left: var(--left-padding-header);
   height: auto;
-  // background: var(--Personal-colors-White);
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(20px);
-  overflow-y: auto;
+  // overflow-y: auto;
   border-radius: 50px;
   width: var(--header-height-xl);
   border: 1px solid rgba(142, 84, 233, 0.2);
+  z-index: 40;
 
   transition: transform 0.5s ease-in-out;
   transform: translateY(0);
@@ -33,6 +33,7 @@
     align-items: center;
     padding: 20px;
     cursor: pointer;
+    position: relative;
 
     &:hover {
       border-radius: 50%;
@@ -60,6 +61,17 @@
       grid-auto-flow: row;
       row-gap: 8px;
       padding: 10px;
+
+      .item {
+        position: relative;
+
+        .mini {
+          position: absolute;
+          top: 50%;
+          left: 80px;
+          transform: translate(0, -50%);
+        }
+      }
     }
 
     .switcher {
