--- a/src/pages/layouts/components/header/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/styles.module.scss
@@ -16,6 +16,9 @@
 
   &.hidden {
     transform: translateY(-120%);
+    @media (max-width: 768px) {
+      transform: translateY(0);
+    }
   }
 
   &.visible {
@@ -99,6 +102,7 @@
       border-radius: 0;
       background: rgba(255, 255, 255, 0.5);
       box-shadow: 0px 2px 10px 1px rgba(142, 84, 233, 0.15);
+      border: none;
     }
 
     .navigation {
