--- a/src/features/wallet/barSubprofileFilter/UI/styles.module.scss
+++ b/src/features/wallet/barSubprofileFilter/UI/styles.module.scss
@@ -22,7 +22,10 @@
     }
 
     .active__type {
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
   }
 }
@@ -107,7 +110,10 @@
       color: var(--Personal-colors-White);
     }
     li {
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
       text-align: center;
       padding: 20px 10px;
       cursor: pointer;
