--- a/src/features/channel/recommendCard/UI/styles.module.scss
+++ b/src/features/channel/recommendCard/UI/styles.module.scss
@@ -197,7 +197,10 @@
     align-items: center;
     padding: 10px;
     p {
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
       font-size: 10px;
       font-style: normal;
       font-weight: 600;
