--- a/src/features/communication/notification/notificationCard/UI/styles.module.scss
+++ b/src/features/communication/notification/notificationCard/UI/styles.module.scss
@@ -5,24 +5,27 @@
   padding: 10px;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
   border-radius: 10px;
-  // box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.16);
 
   &:hover {
     background: #f0f4f8;
   }
 
   &.isUnread {
-    // box-shadow: 0px 4px 0px 1px rgba(79, 100, 255, 0.626);
-    // box-shadow: 0 0 0 1px var(--Personal-colors-main);
     .text__wrapper {
       p {
-        color: var(--Personal-colors-main);
+        background: var(--Gradients-Gradient-1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
       }
     }
 
     .info {
       span {
-        color: var(--Personal-colors-main);
+        background: var(--Gradients-Gradient-1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
       }
     }
   }
@@ -50,6 +53,10 @@
       font-style: normal;
       font-weight: 500;
       line-height: 1;
+
+      @media (max-width: 768px) {
+        text-align: center;
+      }
     }
 
     .text {
