--- a/src/features/createOrder/calendar/UI/styles.scss
+++ b/src/features/createOrder/calendar/UI/styles.scss
@@ -113,7 +113,10 @@
   // }
 
   &__month-view__days__day--weekend {
-    color: var(--Personal-colors-main);
+    background: var(--Gradients-Gradient-1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
     font-weight: 500;
     font-size: 14px;
   }
