--- a/src/features/createOrder/postFiles/UI/styles.module.scss
+++ b/src/features/createOrder/postFiles/UI/styles.module.scss
@@ -73,7 +73,10 @@
       font-size: 24px;
       font-style: normal;
       font-weight: 400;
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
 
       @media (max-width: 768px) {
         font-size: 20px;
