--- a/src/features/offer/acceptOffer/UI/styles.module.scss
+++ b/src/features/offer/acceptOffer/UI/styles.module.scss
@@ -65,7 +65,10 @@
 
     &:hover {
       box-shadow: 1px 1px 5px 1px rgba(71, 114, 230, 0.7);
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
 
     &.selected_date {
