--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -75,7 +75,10 @@
     }
 
     p {
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
       font-size: 24px;
       font-style: normal;
       font-weight: 600;
@@ -556,7 +559,6 @@
     }
 
     &__call_to_action {
-      color: var(--Personal-colors-main);
       font-size: var(--font-size-text-accent-xl);
       background: var(--Gradients-Gradient-1);
       -webkit-background-clip: text;
