--- a/src/features/other/selectOptions/UI/styles.module.scss
+++ b/src/features/other/selectOptions/UI/styles.module.scss
@@ -107,7 +107,10 @@
 
     &.active {
       span {
-        color: var(--Personal-colors-main);
+        background: var(--Gradients-Gradient-1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
       }
       border: 1px solid var(--Personal-colors-main);
       background: var(--Personal-colors-White);
@@ -215,7 +218,10 @@
       }
 
       &:hover {
-        color: var(--Personal-colors-main);
+        background: var(--Gradients-Gradient-1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
         background: rgba(189, 189, 189, 0.25);
         border-radius: 8px;
       }
