--- a/src/widgets/authorization/login/forms/login-form/ui/styles.module.scss
+++ b/src/widgets/authorization/login/forms/login-form/ui/styles.module.scss
@@ -102,7 +102,10 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  color: var(--Personal-colors-main);
+  background: var(--Gradients-Gradient-1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
 .button__sign {
