--- a/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
@@ -38,7 +38,10 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
 
     svg {
@@ -98,7 +101,10 @@
           font-style: normal;
           font-weight: 600;
           line-height: normal;
-          color: var(--Personal-colors-main);
+          background: var(--Gradients-Gradient-1);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
           white-space: nowrap;
         }
       }
