--- a/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
+++ b/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
@@ -12,7 +12,6 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    color: var(--Personal-colors-main);
     font-size: var(--font-size-subtitle-main-xl);
 
     @media (max-width: 992px) {
@@ -82,7 +81,10 @@
           line-height: 1;
         }
         a {
-          color: var(--Personal-colors-main);
+          background: var(--Gradients-Gradient-1);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
         }
 
         @media (max-width: 576px) {
