--- a/src/widgets/channel/channelInfo/UI/reviews/UI/styles.module.scss
+++ b/src/widgets/channel/channelInfo/UI/reviews/UI/styles.module.scss
@@ -16,7 +16,10 @@
       font-weight: 600;
       line-height: normal;
       width: 100%;
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
       background: #fff;
       box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
     }
