--- a/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
@@ -518,7 +518,10 @@
       box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.15);
       font-size: var(--font-size-option-item-xl);
       font-weight: 500;
-      color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
       transition: all 300ms ease;
       padding: 12px 10px;
 
