--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -75,7 +75,6 @@
         font-style: normal;
         line-height: 1;
         font-weight: 600;
-        color: var(--Personal-colors-main);
 
         @media (max-width: 576px) {
           font-weight: 500;
@@ -164,7 +163,10 @@
         font-size: 24px;
         font-style: normal;
         font-weight: 400;
-        color: var(--Personal-colors-main);
+        background: var(--Gradients-Gradient-1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
       }
 
       button {
