--- a/src/widgets/communication/notifications/UI/styles.module.scss
+++ b/src/widgets/communication/notifications/UI/styles.module.scss
@@ -36,7 +36,6 @@
     align-content: center;
     position: relative;
     padding: 20px 50px;
-    // border-bottom: 1px solid var(--black-20, #ccc);
     box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.1);
 
     p {
@@ -44,7 +43,9 @@
       font-style: normal;
       font-weight: 600;
       line-height: 1;
-      color: var(--Personal-colors-main);
+      @media (max-width: 768px) {
+        text-align: center;
+      }
     }
 
     .close {
@@ -99,7 +100,6 @@
     display: grid;
     justify-content: start;
     align-content: center;
-    // border-top: 0.5px solid var(--black-20, #ccc);
     box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.1);
 
     p {
@@ -107,7 +107,6 @@
       font-style: normal;
       font-weight: 500;
       line-height: 1;
-      color: var(--Personal-colors-main);
     }
   }
 }
