--- a/src/widgets/mainPages/calculateIncome/UI/styles.module.scss
+++ b/src/widgets/mainPages/calculateIncome/UI/styles.module.scss
@@ -112,7 +112,10 @@
           padding: 0;
           background: none;
           text-align: center;
-          color: var(--Personal-colors-main);
+          background: var(--Gradients-Gradient-1);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
           font-size: var(--font-size-subtitle-secondary-sm);
         }
 
