--- a/src/features/createOrder/calendar/UI/styles.module.scss
+++ b/src/features/createOrder/calendar/UI/styles.module.scss
@@ -109,14 +109,13 @@
         font-size: 16px;
       }
     }
-
-    svg {
-      width: 20px;
-      height: 20px;
+    Ц svg {
+      width: 30px;
+      height: 30px;
 
       @media (max-width: 576px) {
-        width: 14px;
-        height: 14px;
+        width: 20px;
+        height: 20px;
       }
     }
   }
