--- a/src/features/project/technicalSpecification/UI/styles.module.scss
+++ b/src/features/project/technicalSpecification/UI/styles.module.scss
@@ -64,8 +64,9 @@
       position: absolute;
       top: 0px;
       right: 0;
+
       button {
-        padding: 20px 25px;
+        padding: 15px;
       }
     }
   }
