--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -76,8 +76,8 @@
         line-height: 1;
         font-weight: 600;
 
-        @media (max-width: 576px) {
-          font-weight: 500;
+        @media (max-width: 768px) {
+          text-align: center;
         }
       }
     }
