--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -5,6 +5,7 @@
   --container-padding-top: 80px;
   --Subtitle-text: #666;
   --secondary-text: #606060;
+  --sticky-blog-top: 50px;
 
   --left-padding-header: 2.5vw;
 
