--- a/src/widgets/cart/components/createPost/UI/styles.module.scss
+++ b/src/widgets/cart/components/createPost/UI/styles.module.scss
@@ -10,7 +10,7 @@
 
   //sticky
   position: sticky;
-  top: 100px;
+  top: var(--sticky-blog-top);
 
   @media (max-width: 992px) {
     grid-auto-flow: column;
