--- a/src/pages/layouts/components/sidebarAdmin/UI/styles.module.scss
+++ b/src/pages/layouts/components/sidebarAdmin/UI/styles.module.scss
@@ -33,6 +33,11 @@
       justify-content: center;
       padding: 15px;
 
+      svg {
+        min-height: 22px;
+        min-width: 20px;
+      }
+
       &:hover,
       &.active {
         background: var(--color-whites-w-20, rgba(255, 255, 255, 0.2));
