--- a/src/widgets/adminPanel/complaintInfo/UI/styles.module.scss
+++ b/src/widgets/adminPanel/complaintInfo/UI/styles.module.scss
@@ -34,9 +34,8 @@
   }
 
   .table {
-    padding: 50px 0;
-    border-radius: 16px;
-    background: var(--color-whites-White, #fff);
-    box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.2);
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 25px;
   }
 }
