feat: add Admin Dropdown Menu and Admin Channel Card

--- a/src/pages/layouts/components/headerAdmin/UI/styles.module.scss
+++ b/src/pages/layouts/components/headerAdmin/UI/styles.module.scss
@@ -16,16 +16,16 @@
     align-content: center;
     justify-content: center;
 
-    .exit {
-      display: grid;
-      align-items: center;
-      align-content: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      background: rgba(0, 0, 0, 0.05);
-      border-radius: 50%;
-    }
+    // .exit {
+    //   display: grid;
+    //   align-items: center;
+    //   align-content: center;
+    //   justify-content: center;
+    //   width: 40px;
+    //   height: 40px;
+    //   background: rgba(0, 0, 0, 0.05);
+    //   border-radius: 50%;
+    // }
   }
 
   .right {
