--- a/src/pages/layouts/components/sidebarAdmin/UI/styles.module.scss
+++ b/src/pages/layouts/components/sidebarAdmin/UI/styles.module.scss
@@ -19,7 +19,7 @@
     align-items: center;
     align-content: center;
     justify-content: center;
-    padding: 20px;
+    padding: 20px 22px;
   }
 
   ul {
@@ -31,7 +31,7 @@
       align-items: center;
       align-content: center;
       justify-content: center;
-      padding: 15px;
+      padding: 15px 28px;
 
       svg {
         min-height: 22px;
