feat: rules, offer, faq

--- a/src/widgets/authorization/registration/forms/registration-form/ui/styles.module.scss
+++ b/src/widgets/authorization/registration/forms/registration-form/ui/styles.module.scss
@@ -138,13 +138,17 @@
 .agreement {
   text-align: center;
   color: #000;
-  font-size: 8px;
+  font-size: 10px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 
-  span {
+  a {
     color: #4d94ff;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
