feat: change password logic, footer mobile, truncate

--- a/src/entities/channel/ui/information/description/UI/styles.module.scss
+++ b/src/entities/channel/ui/information/description/UI/styles.module.scss
@@ -99,6 +99,7 @@
     }
 
     .title {
+      color: var(--Personal-colors-main);
       display: grid;
       grid-auto-flow: column;
       justify-content: space-between;
