--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -165,6 +165,7 @@
             font-style: normal;
             font-weight: 600;
             line-height: normal;
+            color: var(--Personal-colors-main);
 
             @media (max-width: 576px) {
               font-weight: 500;
