--- a/src/features/channel/accommPrice/UI/styles.module.scss
+++ b/src/features/channel/accommPrice/UI/styles.module.scss
@@ -17,21 +17,24 @@
   }
 
   .button {
+    text-transform: uppercase;
+    color: var(--Personal-colors-main);
     border-radius: 12px;
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 600;
     line-height: normal;
-    border: 1px solid var(--Personal-colors-main);
     background: var(--Personal-colors-White);
     padding: 15px 10px;
+    box-shadow: 0px 0px 3px 0.5px var(--Personal-colors-main);
 
     @media (max-width: 576px) {
-      font-size: 14px;
+      font-weight: 500;
+      font-size: 12px;
     }
 
     &.active {
-      border: none;
+      box-shadow: none;
       color: var(--Personal-colors-White);
       background: var(
         --Gradients-Gradient-1,
