--- a/src/features/other/selectOptions/UI/styles.module.scss
+++ b/src/features/other/selectOptions/UI/styles.module.scss
@@ -107,11 +107,12 @@
 
     &.active {
       span {
-        background: var(--Gradients-Gradient-1);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
+        // background: var(--Gradients-Gradient-1);
+        // -webkit-background-clip: text;
+        // -webkit-text-fill-color: transparent;
+        // background-clip: text;
       }
+
       border: 1px solid var(--Personal-colors-main);
       background: var(--Personal-colors-White);
     }
@@ -126,6 +127,7 @@
       span {
         color: rgba(0, 0, 0, 0.6);
       }
+
       padding: 10px;
       border: 1px solid var(--Inside-container);
       height: 30px;
@@ -220,11 +222,9 @@
 
       &.active {
         color: var(--Personal-colors-black);
-        background: linear-gradient(
-          45deg,
-          rgba(71, 114, 230, 0.25) 23.91%,
-          rgba(142, 84, 233, 0.25) 75.06%
-        );
+        background: linear-gradient(45deg,
+            rgba(71, 114, 230, 0.25) 23.91%,
+            rgba(142, 84, 233, 0.25) 75.06%);
         border-radius: 8px;
       }
     }
