--- a/src/pages/layouts/components/footer/UI/styles.module.scss
+++ b/src/pages/layouts/components/footer/UI/styles.module.scss
@@ -3,7 +3,7 @@
   color: #fff;
   width: 100%;
 
-  > section {
+  >section {
     display: grid;
     grid-auto-flow: row;
     row-gap: 60px;
@@ -29,7 +29,7 @@
       }
 
       @media (max-width: 576px) {
-        gap: 20px;
+        gap: 10px;
       }
 
       .logo {
@@ -57,11 +57,11 @@
         @media (max-width: 576px) {
           grid-auto-flow: row;
           justify-content: center;
-          gap: 10px;
+          gap: 5px;
         }
 
         &__item {
-          > h4 {
+          >h4 {
             font-size: 36px;
             font-weight: 500;
 
@@ -70,12 +70,12 @@
             }
 
             @media (max-width: 576px) {
-              font-size: 30px;
+              font-size: 20px;
               text-align: center;
             }
           }
 
-          > p {
+          >p {
             font-size: 16px;
             font-weight: 500;
 
@@ -85,6 +85,8 @@
 
             @media (max-width: 576px) {
               text-align: center;
+              font-size: 10px;
+              font-weight: 400;
             }
           }
         }
@@ -128,7 +130,11 @@
           gap: 20px;
           align-items: start;
 
-          > h4 {
+          @media (max-width: 576px) {
+            gap: 10px;
+          }
+
+          >h4 {
             font-size: 18px;
             font-weight: 600;
 
@@ -137,7 +143,7 @@
             }
           }
 
-          > ul {
+          >ul {
             display: grid;
             grid-auto-flow: row;
             gap: 10px;
@@ -148,6 +154,12 @@
             @media (max-width: 992px) {
               text-align: center;
               padding-left: 0;
+            }
+
+            @media (max-width: 576px) {
+              font-weight: 400;
+              font-size: 12px;
+              gap: 5px;
             }
           }
         }
@@ -167,7 +179,7 @@
 
         @media (max-width: 576px) {
           padding-top: 20px;
-          gap: 20px;
+          gap: 10px;
         }
 
         &__item {
@@ -176,19 +188,23 @@
           justify-content: center;
           align-items: center;
 
-          > h4 {
+          >h4 {
             font-size: 22px;
             font-weight: 600;
 
             @media (max-width: 576px) {
-              font-size: 18px;
+              font-size: 16px;
             }
           }
 
-          > p {
+          >p {
             font-size: 14px;
             font-weight: 400;
             text-align: center;
+
+            @media (max-width: 576px) {
+              font-size: 12px;
+            }
           }
         }
 
@@ -204,9 +220,11 @@
 
           @media (max-width: 576px) {
             align-items: start;
+            padding-top: 20px;
+            align-items: center;
           }
 
-          > p {
+          >p {
             font-size: 12px;
             font-weight: 400;
             line-height: 1;
@@ -215,6 +233,10 @@
             @media (max-width: 992px) {
               max-width: 40vw;
               line-height: 1.3;
+            }
+
+            @media (max-width: 576px) {
+              font-size: 10px;
             }
           }
         }
@@ -230,7 +252,7 @@
       letter-spacing: 1px;
 
       @media (max-width: 576px) {
-        font-size: 12px;
+        font-size: 10px;
         font-weight: 400;
         padding-top: 30px;
       }
